--- a/index.html
+++ b/index.html
@@ -92,20 +92,33 @@
   </div>
 
   <div class="gallery" id="gallery" style="display:none;">
-    <img src="photos/IMG_0037.jpg" alt="Фото 1" onclick="openModal('photos/IMG_0037.jpg')">
-    <img src="photos/IMG_0039.jpg" alt="Фото 2" onclick="openModal('photos/IMG_0039.jpg')">
-    <img src="photos/IMG_0040.jpg" alt="Фото 3" onclick="openModal('photos/IMG_0040.jpg')">
-    <img src="photos/IMG_0041.jpg" alt="Фото 4" onclick="openModal('photos/IMG_0041.jpg')">
-    <img src="photos/IMG_0042.jpg" alt="Фото 5" onclick="openModal('photos/IMG_0042.jpg')">
-    <img src="photos/IMG_0044.jpg" alt="Фото 6" onclick="openModal('photos/IMG_0044.jpg')">
-    <img src="photos/IMG_0045.jpg" alt="Фото 7" onclick="openModal('photos/IMG_0045.jpg')">
-    <img src="photos/IMG_0046.jpg" alt="Фото 8" onclick="openModal('photos/IMG_0046.jpg')">
-    <img src="photos/IMG_0047.jpg" alt="Фото 9" onclick="openModal('photos/IMG_0047.jpg')">
-    <img src="photos/IMG_0048.jpg" alt="Фото 10" onclick="openModal('photos/IMG_0048.jpg')">
-    <img src="photos/IMG_0050.jpg" alt="Фото 11" onclick="openModal('photos/IMG_0050.jpg')">
-    <img src="photos/IMG_0051.jpg" alt="Фото 12" onclick="openModal('photos/IMG_0051.jpg')">
-    <img src="photos/IMG_0053.jpg" alt="Фото 13" onclick="openModal('photos/IMG_0053.jpg')">
-    <img src="photos/IMG_0055.jpeg" alt="Фото 14" onclick="openModal('photos/IMG_0055.jpeg')">
+    <!-- Фото 1 -->
+    <img src="photos/IMG_0039.jpg" alt="Фото 1" onclick="openModal('photos/IMG_0039.jpg')">
+    <!-- Фото 2 -->
+    <img src="photos/IMG_0040.jpg" alt="Фото 2" onclick="openModal('photos/IMG_0040.jpg')">
+    <!-- Фото 3 -->
+    <img src="photos/IMG_0041.jpg" alt="Фото 3" onclick="openModal('photos/IMG_0041.jpg')">
+    <!-- Фото 4 -->
+    <img src="photos/IMG_0042.jpg" alt="Фото 4" onclick="openModal('photos/IMG_0042.jpg')">
+    <!-- Фото 5 -->
+    <img src="photos/IMG_0044.jpg" alt="Фото 5" onclick="openModal('photos/IMG_0044.jpg')">
+    <!-- Фото 6 -->
+    <img src="photos/IMG_0045.jpg" alt="Фото 6" onclick="openModal('photos/IMG_0045.jpg')">
+    <!-- Фото 7 -->
+    <img src="photos/IMG_0046.jpg" alt="Фото 7" onclick="openModal('photos/IMG_0046.jpg')">
+    <!-- Фото 8 -->
+    <img src="photos/IMG_0047.jpg" alt="Фото 8" onclick="openModal('photos/IMG_0047.jpg')">
+    <!-- Фото 9 -->
+    <img src="photos/IMG_0048.jpg" alt="Фото 9" onclick="openModal('photos/IMG_0048.jpg')">
+    <!-- Фото 10 -->
+    <img src="photos/IMG_0050.jpg" alt="Фото 10" onclick="openModal('photos/IMG_0050.jpg')">
+    <!-- Фото 11 -->
+    <img src="photos/IMG_0051.jpg" alt="Фото 11" onclick="openModal('photos/IMG_0051.jpg')">
+    <!-- Фото 12 -->
+    <img src="photos/IMG_0053.jpg" alt="Фото 12" onclick="openModal('photos/IMG_0053.jpg')">
+    <!-- Фото 13 -->
+    <img src="photos/IMG_0054.jpg" alt="Фото 13" onclick="openModal('photos/IMG_0054.jpg')">
+    <!-- Добавь ещё, если нужно -->
   </div>
 
   <div class="modal" id="modal" onclick="closeModal()">
